# dashboard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zuul.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.tests  LICENSE  Makefile  README.md  TODO.md  babel.config.js  biome.json  main.py  package.json  packit_dashboard.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  webpack.config.js
.github/: dependabot.yml  notify.py  stale.yml
.github/workflows/: build-and-push.yml  preview-pr.yml  test-frontend.yml
files/: zuul-install-requirements.yaml  zuul-pre-commit.yaml  zuul-tests.yaml
files/ansible/: common.yaml  httpd.yaml  icons.yaml  install-deps.yaml  recipe-tests.yaml  recipe.yaml
files/cfg/: httpd.conf  httpd_packit.conf
files/scripts/: run_httpd.sh
frontend/: .gitignore  .prettierignore  app.js  dprint.json  eslint.config.mjs  index.html  jobs.js  package.json  pnpm-lock.yaml  routes.js  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/components/: app_layout.js  branch.js  chroot_status.js  copr_builds_table.js  dashboard.js  error.js  issues.js  jobs.js  koji_builds_table.js  not_found.js  pr.js  preloader.js  project_info.js  projects.js  projects_list.js  releases.js  results_copr.js  results_koji.js  results_srpm.js  (+8 more)
packit_dashboard/: app.py  cache.py  config.py  packagewide_utils.py  packit_dashboard.asgi  packit_dashboard.wsgi  utils.py
templates/: builds.html  index.html  information.html  main_frame.html  project.html  projects.html  status.html
tests/: spellbook.py
(+371 files in other folders)
